# bot

./: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  Dockerscript  deploy.sh
src/: group.rs  handler.rs  main.rs  muteable.rs
src/module/: addemoji.rs  badword.rs  blacklink.rs  clap.rs  exchange.rs  faq.rs  help.rs  irc.rs  level.rs  mod.rs  mute.rs  poll.rs  presence.rs  purge.rs  selfmod.rs  slowmode.rs  startup_message.rs  undelete.rs  uwu.rs  yarra.rs
