[package]
name = "hello_worlds-bot"
version = "0.1.0"
authors = ["personinblack <berkay@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
lazy_static = "1.4.0"
chrono = "0.4"

[dependencies.serenity]
default-features = false
features = [
    "builder", "cache", "client", "framework", "standard_framework", "model", "utils",
    "absolute_ratelimits", "rustls_backend"
]
version = "0.8"
