[package]
name = "hello_worlds-bot"
version = "0.1.0"
authors = ["personinblack <berkay@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
lazy_static = "1.4"
chrono = "0.4"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.10", features = ["json"] }
base64 = "0.13"
serde_json = "1.0"
strsim = "0.10"
async-trait = "0.1"
rand = "0.7"

[dependencies.serenity]
default-features = false
features = [
    "builder", "cache", "client", "framework", "standard_framework", "model", "utils",
    "absolute_ratelimits", "rustls_backend", "gateway", "http"
]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
